ship a src tarball and sign the checksums file

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -43,6 +43,11 @@ archives:
       windows: Windows
       386: i386
       amd64: x86_64
+signs:
+  - artifacts: checksum
+source:
+  enabled: true
+  name_template: '{{ .ProjectName }}-src-{{ .Version }}'
 checksum:
   name_template: 'checksums.txt'
 snapshot:
